# celery-lab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: celery_app.py  producer.py  tasks.py
src/order_service/: celery_client.py  create_order.py
src/payment_hub/: celery_client.py  tasks.py
