[project]
name = "celery-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Silas Stoffel",email = "silasstofel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis] (>=5.5.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
